--- a/timeline.html
+++ b/timeline.html
@@ -30,26 +30,25 @@
                 <div id="text">
 			        <div id="code">
 					<!-- 4. CHỈNH SỬA LỜI CHÚC CỦA BẠN TẠI ĐÂY-->
-			      <font color="#3500ff"><span class="say">Chúc mừng sinh nhật người con gái anh yêu</span><br>
-						<span class="say">Em có nhớ chúng ta yêu nhau được bao nhiêu ngày không ?</span><br>
-						<span class="say">Anh thì nhớ rất rõ đấy.</span><br>
-						<span class="say"> </span><br>
-						<span class="say">Người ta nói bệnh nào cũng có thuốc chữa</span><br>
-						<span class="say">Anh đã không tin điều đó nữa đến khi anh gặp em</span><br>
-						<span class="say">Anh đã phát hiện ra anh đã mang một căn bệnh mà có lẽ,</span><br>
-						<span class="say">Có lẽ sẽ không bao giờ có thuốc điều trị</span><br>
-						<span class="say">Đó là căn bệnh hạnh phúc nhất mà anh mai mắn được mắc phải</span><br>
-						<span class="say">Đó là bệnh yêu em quá nhiều</span><br>
-						<span class="say">Yêu em cho đến khi nào anh không còn tồn tại <3</span><br>
+			      <font color="#3500ff"><span class="say">Tin nhắn này được gửi từ thuê bao trả trước đến một thuê bao trả sau còn nợ tiền cước.</span><br>
+						<span class="say">Dear Dương công chúa!</span><br>
+						<span class="say">Mấy mươi mùa xuân tươi trẻ đi qua, để quên bao vết hằn trên gương mặt bạn già của anh.</span><br>
+						<span class="say">Mấy mươi mùa xuân tươi trẻ đi qua, để quên bao vết hằn trên gương mặt bạn già của anh. </span><br>
+						<span class="say">Mới chuẩn bị bước qua 18 mùa xuân chứ mấy mà nhìn mặt em thì anh cứ tưởng 81 không à.</span><br>
+						<span class="say">Đùa thui!!!</span><br>Và điều cuối cùng quan trọng nhất năm em 18 này anh muốn gửi em điều là:
+						<span class="say">Sinh nhật này tuy anh không ở bên cạnh em nhưng đêm trước sinh nhật em thì anh sẽ bí mật nhét trái tim anh vào trong lồng ngực em.</span><br>
+						<span class="say">Liệu hôm đó, em có thấy tim mình đập mạnh hơn không nhỉ? Thật là tò mò quá đi!</span><br>
+						<span class="say">Còn lời chúc ư! Anh đã để tất cả những lời chúc tốt đẹp, vui vẻ nhất và hạnh phúc nhất đến em ở trong trái tim đó rồi e ạ.</span><br>
+						<span class="say">Và điều cuối cùng quan trọng nhất năm em 18 này anh muốn gửi em điều là:</span><br>
+						<span class="say">CHÚC EM NĂM NAY THI ĐẠI HỌC SẼ CÓ ĐIỂM THẬT CAO VÀ ĐỖ VÀO TRƯỜNG MÀ EM MƠ ƯỚC! Anh sẽ luôn đồng hành với em cho tới lúc thi mặc dù k thi cùng khối với em những anh sẽ dõi theo và động viên chỉ bảo em học tới nơi tới chốn!</span><br>
 						<span class="say">Hãy cứ tin em nhé.</span><br>
 						<span class="say">Chúc em sinh nhật vui vẽ.</span><br>
-						<span class="say"> </span><br>
-                        <span class="say"><span class="space"></span> -- Anh yêu Em --</span>
+						<span class="say">Chúc em sinh nhật vui vẻ !! Thương em!! </span><br>
 			  </font></p>
       </div>
                 </div>
                 <div id="clock-box">
-					<span class="STYLE1"> Thời gian đã yêu em</span>  <!--Có thể thay đổi chổ này thành số tuổi của người bạn muốn chúc -->
+					<span class="STYLE1"> Những ngày vui tươi của công chúa</span>  <!--Có thể thay đổi chổ này thành số tuổi của người bạn muốn chúc -->
                   <div id="clock"></div>
               </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
@@ -188,7 +187,7 @@
 
         var textAnimate = eval(Jscex.compile("async", function () {
 		    var together = new Date();
-		    var year = 2020, month = 7, day = 20;  // 5. thay đổi ngày tháng năm yêu nhau tại đây hoặc ngày sinh của người mà bạn muốn chúc
+		    var year = 2004, month = 9, day = 18;  // 5. thay đổi ngày tháng năm yêu nhau tại đây hoặc ngày sinh của người mà bạn muốn chúc
 		    together.setFullYear(year, month - 1, day); 			
 		    together.setHours(0);							
 		    together.setMinutes(0);				
