--- a/gallery.html
+++ b/gallery.html
@@ -20,79 +20,40 @@
         <!-- 6. Thay tất cả bằng hình ảnh của bạn -->
         <div class="gallery" id="gallery">
             <div class="gallery-item">
-                <div class="content"><img src="./img/pic1.jpg" alt="" /></div>
+                <div class="content"><img src="./img/273268933_5308881862469430_5693512777890212679_n.jpg" alt="" /></div>
             </div>
             <div class="gallery-item">
-                <div class="content"><img src="./img/pic2.jpg" alt="" /></div>
+                <div class="content"><img src="./img/272859672_3056875694627577_3954913782509218346_n.jpg" alt="" /></div>
             </div>
             <div class="gallery-item">
-                <div class="content"><img src="./img/pic3.jpg" alt="" /></div>
+                <div class="content"><img src="./img/273824528_260477972771007_2722383809893287734_n.gif" alt="" /></div>
             </div>
             <div class="gallery-item">
-                <div class="content"><img src="./img/pic4.jpg" alt="" /></div>
+                <div class="content"><img src="./img/273869545_343552850966648_5150917219668598195_n.gif" alt="" /></div>
             </div>
             <div class="gallery-item">
-                <div class="content"><img src="./img/pic5.jpg" alt="" /></div>
+                <div class="content"><img src="./img/272892364_542955840109683_1026184052300325167_n.jpg" alt="" /></div>
             </div>
             <div class="gallery-item">
-                <div class="content"><img src="./img/pic6.jpg" alt="" /></div>
+                <div class="content"><img src="./img/272695124_469981458114743_261134186946301029_n.jpg" alt="" /></div>
             </div>
             <div class="gallery-item">
-                <div class="content"><img src="./img/pic7.jpg" alt="" /></div>
+                <div class="content"><img src="./img/272923379_3099480383628251_7482711440678306971_n.jpg" alt="" /></div>
             </div>
             <div class="gallery-item">
-                <div class="content"><img src="./img/pic8.jpg" alt="" /></div>
+                <div class="content"><img src="./img/272657596_956414505004258_4351904780967302838_n.jpg" alt="" /></div>
             </div>
             <div class="gallery-item">
-                <div class="content"><img src="./img/pic9.jpg" alt="" /></div>
+                <div class="content"><img src="./img/272259493_1331301490668719_8028805599753487481_n.jpg" alt="" /></div>
             </div>
             <div class="gallery-item">
-                <div class="content"><img src="./img/pic10.jpg" alt="" /></div>
+                <div class="content"><img src="./img/248271466_370346184923873_5940571232583947905_n.jpg" alt="" /></div>
             </div>
             <div class="gallery-item">
-                <div class="content"><img src="./img/pic11.jpg" alt="" /></div>
+                <div class="content"><img src="./img271693727_281505243929097_4295275164233137977_n.jpg" alt="" /></div>
             </div>
             <div class="gallery-item">
-                <div class="content"><img src="./img/pic12.jpg" alt="" /></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="./img/pic13.jpg" alt="" /></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="./img/pic14.jpg" alt="" /></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="./img/pic15.jpg" alt="" /></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="./img/pic16.jpg" alt="" /></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="./img/pic17.jpg" alt="" /></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="./img/pic18.jpg" alt="" /></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="./img/pic19.jpg" alt="" /></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="./img/pic20.jpg" alt="" /></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="./img/pic21.jpg" alt="" /></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="./img/pic22.jpeg" alt="" /></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="./img/pic23.jpg" alt="" /></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="./img/pic25.jpg" alt="" /></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="./img/pic25.jpg" alt="" /></div>
+                <div class="content"><img src="./img/257581513_1108164049983837_7149382935525263176_n.jpg" alt="" /></div>
             </div>
         </div>
         <!-- Phần nhạc -->
