--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
 
         <!-- 2. Phần ảnh của người bạn mún chúc -->
-        <img src="./img/MyAvatar.jpg" alt="" class="cover" />
+        <img src="./img/272307844_951670902144828_1509467621381921339_n.png" alt="" class="cover" />
 
         <!-- 3. Phần nhạc -->
         <audio id="player" autoplay loop>
